feat(ui): Implemented SQL Autocompletion
